--- a/.github/workflows/docker_image_workflow.yml
+++ b/.github/workflows/docker_image_workflow.yml
@@ -10,15 +10,14 @@ on:
   push:
     branches: [main]
     paths:
-      - "app/Dockerfile"
-      - "app/requirements.txt"
+      - "app"
     tags:
       - "*"
-  pull_request:
-    branches: [main]
-    paths:
-      - "app/Dockerfile"
-      - "app/requirements.txt"
+  # pull_request:
+  #   branches: [main]
+  #   paths:
+  #     - "app/Dockerfile"
+  #     - "app/requirements.txt"
 
 jobs:
   docker:
@@ -29,7 +28,7 @@ jobs:
       - name: Prepare
         id: prep
         run: |
-          DOCKER_IMAGE=ghcr.io/astrophpeter/blast
+          DOCKER_IMAGE=hub.ncsa.illinois.edu/blast/blast
           if [[ $GITHUB_REF == refs/tags/* ]]; then
             VERSION=${GITHUB_REF#refs/tags/v}
             TAGS="${DOCKER_IMAGE}:${VERSION},${DOCKER_IMAGE}:latest"
@@ -42,13 +41,13 @@ jobs:
         id: buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to ghcr
+      - name: Login to container registry
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: "hub.ncsa.illinois.edu"
+          username: "${{ secrets.NCSA_HARBOR_BLAST_USERNAME }}"
+          password: "${{ secrets.NCSA_HARBOR_BLAST_TOKEN }}"
 
       - name: Build and push
         id: docker_build
