--- a/app/host/fixtures/initial/setup_acknowledgements.yaml
+++ b/app/host/fixtures/initial/setup_acknowledgements.yaml
@@ -90,7 +90,7 @@
     repository_url: https://github.com/hover2pi/svo_filters
     website_url: https://svo.cab.inta-csic.es/main/index.php
     paper_url: https://ui.adsabs.harvard.edu/abs/2020sea..confE.182R/abstract
-    doi: https://zenodo.org/record/4737749
+    doi: 10.5479/ADS/bib/2012ivoa.rept.1015R
 - model: host.Acknowledgement
   pk: 11
   fields:
